--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^0.8.0",
     "next": "^15.2.4",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.5",
