--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^0.8.0",
+    "dotenv": "^16.5.0",
     "next": "^15.2.4",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.5",
