--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^15.2.4",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.5",
+    "radix-ui": "^1.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
