--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "radix-ui": "^1.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0"
