--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^0.8.0",
     "dotenv": "^16.5.0",
     "next": "^15.2.4",
+    "next-auth": "^4.24.11",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.5",
     "react": "^19.0.0",
