--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next-auth": "^4.24.11",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.5",
+    "puppeteer": "^24.10.0",
+    "puppeteer-core": "^24.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0"
