--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
   },
   "dependencies": {
     "@google/genai": "^0.8.0",
+    "@tabler/core": "^1.3.2",
+    "@tabler/icons-react": "^3.34.0",
+    "class-variance-authority": "^0.7.1",
     "dotenv": "^16.5.0",
+    "lucide-react": "^0.523.0",
+    "motion": "^12.19.1",
     "next": "^15.2.4",
     "next-auth": "^4.24.11",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.5",
     "puppeteer": "^24.10.0",
     "puppeteer-core": "^24.10.0",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
